# peacemaker4

./: .gitignore  README.md  README.rst  pyproject.toml
SAS/: convex_hull.xyz  convexhull.py  sas.py  sasa.py  vdw_radii.txt
code-in-progress/: qce.mod
docs/: requirements.txt
docs/source/: 01_peacemaker.rst  02_compiling_and_running.rst  03_configuration_files.rst  04_output.rst  05_sampling.rst  conf.py  index.rst
docs/source/_static/: custom.css
manual_pm4/: manual.tex  pm-picture.drawio
peacemaker3/pm-build-with-make_release/: atomic_data.mod  error.mod  iso_varying_string.mod  peacemaker  shared_data.mod  thermo.mod
peacemaker3/pm3_make/: constants.mod  input.mod  peacemaker  polynomial.mod
peacemaker3/src/: main.f90  partition_functions.f90  qce.f90
peacemaker3/test-calc/cluster/mixed/flist/: nmf1w2.flist
peacemaker3/test-calc/cluster/mixed/xyz/: nmf1w1.xyz  nmf2w1.xyz
peacemaker3/test-calc/cluster/nmf/flist/: nmf1.flist  nmf3.flist
peacemaker3/test-calc/clusters/: c.clusterset  c1m1.xyz  c1m1w1-1.xyz  c1m1w2-1.flist  c1m1w4-4.flist  c1m1w4-4.xyz  c1m1w4-7.flist  c1m1w4-8.flist  c1m1w4-8.xyz  c1m1w4-9.xyz  c1m1w5-1.flist  c1m1w5-4.flist  c1m1w5-4.xyz  c1m1w5-5.flist  c1m1w5-8.xyz  c1m1w5-9.flist  c1m1w6-1.flist  c1m1w6-1.xyz  c1m1w6-4.flist  c1m2-1.flist  c1m2-7.flist  c1m2-7.xyz  c1m2w1-1.flist  c1m2w1-1.xyz  c1m2w1-8.flist  c1m2w2-1.xyz  c1m2w2-3.xyz  c1m2w2-5.xyz  c1m2w3-3.xyz  c1m2w3-4.flist  c1m2w3-8.flist  c1m2w3-8.xyz  c1m2w4-3.xyz  c1m2w4-5.xyz  c1m2w5-1.flist  c1m2w5-1.xyz  c1m2w5-6.flist  c1m2w5-6.xyz  c1m2w5-8.xyz  c1m2w6-1.flist  (+405 more)
peacemaker3/test-calc/ternary/: cm.clusterset  cmw.clusterset  peace.out  qce.input  w.clusterset
pm-build-with-make_release/: qce.mod
pm4/: main.f90  meson.build
pm4/src/: atomic_data.f90  cluster.f90  info.f90  input.f90  partition_functions.f90  polynomial.f90  qce.f90  shared_data.f90  thermo.f90
pm4/subprojects/: toml-f.wrap
pm4/test/: main.f90  template.f90~  test_partition_functions.f90  test_qce.f90  test_thermo.f90
pm4/test/notebooks/: auxiliary.ipynb  population_polynomial.ipynb  process_coords.ipynb  volume_polynomial.ipynb
python_scripts/: clusterset2toml.ipynb  example.clusterset  input2toml.py  qce.toml  test.toml  test_clusterset
test-calc/cluster/mixed/flist/: nmf1w1.flist  nmf2w1.flist
test-calc/cluster/nmf/flist/: nmf2.flist
test-calc/cluster/nmf/xyz/: nmf3.xyz
test-calc/cluster/water/flist/: w2.flist
tests/compare_versions/: compare.sh  differences.txt
tests/compare_versions/ternary_test/: compare.sh  differences.txt
tools/: cluster_info.py  clusterset.py  pymaker2.py
tools/convert2toml/: QCEinput2toml.py  clusterset2toml.py
tools/ogolem_scripts/: eliminate.py  gaff_ogo.sh  lmp_data.py
working-code/: Makefile
working-code/make_release/: cluster.mod  kinds.mod  partition_functions.mod
working-code/pm_meson/: main.f90  meson.build
working-code/pm_meson/src/: auxiliary.f90  auxiliary.mod  cluster.f90  config.f90  config.mod  info.f90  info.mod  input.f90  lengths.mod  partition_functions.f90  polynomial.f90  qce.f90  reader.f90  shared_data.mod  thermo.f90
working-code/pm_meson/test/: main.f90  meson.build  test_auxiliary.f90  test_partition_functions.f90  test_polynomial.f90  test_pop_polynomial.f90  test_process_coordinates_record.f90  test_qce.f90  test_suite1.f90  test_suite2.f90  test_thermo.f90  test_vol_polynomial.f90  unit_test_helper.ipynb
working-code/pm_meson/test/notebooks/: partition_functions.ipynb  population_polynomial.ipynb  process_coords.ipynb  qce.ipynb  thermo.ipynb
working-code/test-calc/calc/x-nmf0.2-original_pm/: clusterset.toml  fort.0  peace.out  qce.input  qce.toml
working-code/test-calc/clusters/: c1.flist  c1.xyz  c1m1.flist  c1m1w1-1.flist  c1m1w2-1.xyz  c1m1w3-2.flist  c1m1w3-2.xyz  c1m1w3-7.flist  c1m1w3-7.xyz  c1m1w4-7.xyz  c1m1w4-9.flist  c1m1w5-1.xyz  c1m1w5-5.xyz  c1m1w5-8.flist  c1m1w5-9.xyz  c1m1w6-4.xyz  c1m1w6-8.flist  c1m1w6-8.xyz  c1m2-1.xyz  c1m2w1-8.xyz  c1m2w2-1.flist  c1m2w2-3.flist  c1m2w2-5.flist  c1m2w3-3.flist  c1m2w3-4.xyz  c1m2w4-1.flist  c1m2w4-1.xyz  c1m2w4-3.flist  c1m2w4-5.flist  c1m2w5-4.flist  c1m2w5-4.xyz  c1m2w5-8.flist  c1m2w6-1.xyz  c1m3w2-1.flist  c1m3w2-1.xyz  c1m3w2-2.xyz  c1m3w2-6.xyz  c1m3w2-7.xyz  c1m3w2-8.flist  c1m3w2-9.flist  (+448 more)
working-code/test-calc/ternary/: c.clusterset  cmw.clusterset.toml  cw.clusterset  fort.0  mw.clusterset  peace.out  qce.input  qce.toml
(+8 files in other folders)
